<resources>
    <string name="app_name">InventoryApp</string>
    <string name="item_image">item image</string>
    <string name="add">ADD</string>
    <string name="no_data">No data exists!!!\nAdd new data by clicking ADD button</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_name">product name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_supplier">Supplier</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="product_id">Product Id</string>
    <string name="add_prodcut">Add prodcut</string>
    <string name="save">save</string>
    <string name="are_u_sure_you_want_discard">Are you sure you want to discard changes?</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="data_changes">Data changes</string>
    <string name="image">Image</string>
    <string name="image_path">Image Path</string>
    <string name="add_image_path">add image path</string>
    <string name="choosen_mage">chosen image</string>
    <string name="failed_to_load_image">failed to load image</string>
    <string name="didnt_pic_picture">You didn\'t pick a picture\n try again</string>
    <string name="sell">sell</string>
    <string name="procut_sold">\"product sold \"</string>
    <string name="out_of_product">sorry, out of product</string>
    <string name="delete">delete</string>
    <string name="product_deleted">product deleted</string>
    <string name="failed_delete_product">failed to delete product</string>
    <string name="order_from_supplier">Order</string>
    <string name="reduce_quantity">reduce quantity</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="invalid_data">Invalid Data</string>
    <string name="quantity_details">Quantity: %d</string>
    <string name="price_details">Price: %s $</string>
    <string name="supplier_details">Supplier: %1$s </string>
    <string name="product_info">Product Info.</string>
    <string name="max_quantitiy">\"max available is %1$d \"</string>
    <string name="product_saved">product saved</string>
    <string name="invalied_inputs">invalid input for product\nplease, check data again!</string>
    <string name="id_details">"Id: %1$d "</string>
    <string name="enter_quantity">Enter quantity:</string>
    <string name="quantity_ordered">"Quantity( %d ) Ordered "</string>
    <string name="exceeds_max_quantity">max quantity exceeded</string>
    <string name="inventory">Inventory</string>
    <string name="sales">Sales</string>
    <string name="total_price">total price: %1$s $</string>
    <string name="sold">Sold: %d</string>
    <string name="order_from">Order From : %1$s</string>
    <string name="product_title">product name : %1$s</string>
    <string name="prod_id">"Product Id : %1$s"</string>
    <string name="delete_product">Delete Product</string>
    <string name="are_u_sure_u_want_delete">Are you sure you want to delete the product ?</string>
</resources>